--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="transparentDim">#802A2C31</color>
+
+    <!--transactions-->
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorPriceText">#253035</color>
+    <color name="colorHighlightTint">#C9EDE8</color>
+    <color name="colorDescriptionText">#718E9C</color>
+    <color name="colorTitleText">#253035</color>
+
+    <!--header-->
+    <color name="colorHeaderText">#FFFFFF</color>
+    <color name="colorHeaderIconTint">#FFFFFF</color>
+
 </resources>
