--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,6 +6,7 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowTranslucentStatus" tools:targetApi="kitkat">true</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="fontFamily">@font/iransans_normal</item>
     </style>
 
 </resources>
