--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="background">#FFFFFF</color>
+    <color name="alpha_white">#33FFFFFF</color>
 
     <color name="transparentDim">#802A2C31</color>
 
